@@ -5140,3 +5140,4 @@
   DoubleField renamed to the more appropriate DecimalField
   BigDecimal support continued (as in, things I missed)
   BigDecimal support added to javafx module
+  SerializationWhitelist moved to common.remote module
